# rustpdf

./: Dockerfile  README.md  cloudrunpdf.code-workspace  start.sh
cloudrunpdf/: Cargo.toml
cloudrunpdf/src/: main.rs
cloudrunpdf/src/adaptor/: mod.rs  pdf_impl.rs
usecase/: Cargo.toml
usecase/src/: lib.rs  usecase_pdf.rs
usecase/src/adaptor/: pdf.rs
